# Weather-app

./: .env.template  .gitignore  README.md  config.py  coordinates.py  pyproject.toml  test.py  weather  weather_api_service.py  weather_formatter.py
src/: config.py  coordinates.py  exceptions.py  history.py  weather  weather_api_service.py  weather_formatter.py
