[tool.poetry]
name = "weather-app"
version = "0.1.0"
description = ""
authors = ["it_tr1p"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
geopy = "^2.4.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
